--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "del": "^5.1.0",
+    "es-dev-server": "^1.55.0",
     "eslint": "^6.8.0",
     "gulp": "^4.0.2",
     "polymer-cli": "^1.9.11",
