기존 파일 에러 재 업로드
기존 파일에서 에러가 발생.
새로 설치해놓은 lit-element를 올림.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-build/
-node_modules/
-npm-debug.log
-firebase-debug.log
-_site/
-.DS_Store
+/node_modules/
 
-.env.dev
-.env.prod
+# only generated for size check
+my-element.bundled.js
