--- a/package.json
+++ b/package.json
@@ -1,31 +1,64 @@
 {
-  "name": "hnpwa",
-  "version": "1.0.0",
-  "license": "MIT",
-  "repository": "HeratPatel/hnpwa",
+  "name": "lit-element-starter-js",
+  "version": "0.0.0",
+  "description": "A simple web component",
+  "main": "my-element.js",
+  "module": "my-element.js",
+  "type": "module",
   "scripts": {
-    "serve": "es-dev-server --app-index index.html --node-resolve --watch --open"
+    "lint": "lit-analyzer my-element.js && eslint '**/*.js'",
+    "format": "prettier my-element.js test/* --write",
+    "docs": "npm run docs:clean && npm run analyze && npm run docs:build && npm run docs:assets && npm run docs:gen",
+    "docs:clean": "rimraf docs",
+    "docs:gen": "eleventy --config=.eleventy.cjs",
+    "docs:gen:watch": "eleventy --config=.eleventy.cjs --watch",
+    "docs:build": "rollup -c --file docs/my-element.bundled.js",
+    "docs:assets": "cp node_modules/prismjs/themes/prism-okaidia.css docs/",
+    "docs:serve": "es-dev-server --root-dir=docs --node-resolve --watch",
+    "analyze": "wca analyze \"**/*.js\" --outFile custom-elements.json",
+    "serve": "es-dev-server --node-resolve --watch",
+    "test": "karma start karma.conf.cjs",
+    "test:watch": "karma start karma.conf.cjs --auto-watch=true --single-run=false",
+    "test:update-snapshots": "karma start karma.conf.cjs --update-snapshots",
+    "test:prune-snapshots": "karma start karma.conf.cjs --prune-snapshots",
+    "checksize": "rollup -c ; cat my-element.bundled.js | gzip -9 | wc -c ; rm my-element.bundled.js"
   },
+  "keywords": [
+    "web-components",
+    "lit-element",
+    "javascript"
+  ],
+  "author": "The Polymer Authors",
+  "license": "BSD-3-Clause",
   "dependencies": {
-    "@polymer/app-layout": "^3.1.0",
-    "@polymer/paper-checkbox": "^3.1.0",
-    "@polymer/polymer": "^3.3.1",
-    "@webcomponents/webcomponentsjs": "^2.4.3",
-    "dotenv": "^8.2.0",
-    "first-input-delay": "^0.1.3",
-    "gulp-replace": "^1.0.0",
-    "lit-element": "^2.3.1",
-    "pwa-helpers": "^0.9.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "firebase": "^7.16.0",
+    "firebase-admin": "^8.13.0",
+    "lit-element": "^2.3.1"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^0.10.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
+    "@open-wc/testing": "^2.5.10",
+    "@open-wc/testing-karma": "^3.3.11",
+    "@rollup/plugin-replace": "^2.3.1",
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
     "babel-eslint": "^10.1.0",
-    "del": "^5.1.0",
-    "es-dev-server": "^1.55.0",
+    "chai": "^4.2.0",
+    "deepmerge": "^4.2.2",
+    "es-dev-server": "^1.46.1",
     "eslint": "^6.8.0",
-    "gulp": "^4.0.2",
-    "polymer-cli": "^1.9.11",
-    "prpl-server": "^1.4.0"
+    "karma": "^5.1.0",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^2.0.1",
+    "lit-analyzer": "^1.1.9",
+    "mocha": "^7.1.1",
+    "prettier": "^2.0.4",
+    "rimraf": "^3.0.2",
+    "rollup": "^1.32.1",
+    "rollup-plugin-filesize": "^7.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "web-component-analyzer": "^1.0.3"
   }
 }
