--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   "author": "The Polymer Authors",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "firebase": "^7.16.0",
-    "firebase-admin": "^8.13.0",
+    "firebase": "^7.17.1",
+    "firebaseui": "^4.6.1",
     "lit-element": "^2.3.1"
   },
   "devDependencies": {
@@ -48,9 +48,9 @@
     "deepmerge": "^4.2.2",
     "es-dev-server": "^1.46.1",
     "eslint": "^6.8.0",
-    "karma": "^5.1.0",
+    "karma": "^4.4.1",
     "karma-chai": "^0.1.0",
-    "karma-mocha": "^2.0.1",
+    "karma-mocha": "^1.3.0",
     "lit-analyzer": "^1.1.9",
     "mocha": "^7.1.1",
     "prettier": "^2.0.4",
