--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "license": "MIT",
   "repository": "HeratPatel/hnpwa",
   "scripts": {
-    "start": "gulp env-dev && polymer serve",
-    "build:static": "polymer build",
-    "build:prpl": "gulp env-prod && polymer build --auto-base-path && gulp firebase",
-    "serve:static": "polymer serve --port 5000 build/es5-bundled",
-    "serve:prpl": "firebase serve",
-    "perf-budget": "lighthouse https://hnpwa-fcf6b.firebaseapp.com --budget-path=budget.json"
+    "serve": "es-dev-server --app-index index.html --node-resolve --watch --open"
   },
   "dependencies": {
+    "@material/card": "^7.0.0",
+    "@material/icon-button": "^7.0.0",
+    "@material/mwc-button": "^0.17.2",
+    "@material/mwc-icon-button": "^0.17.2",
     "@polymer/app-layout": "^3.1.0",
     "@polymer/paper-checkbox": "^3.1.0",
     "@polymer/polymer": "^3.3.1",
-    "@webcomponents/webcomponentsjs": "^2.4.3",
+    "@webcomponents/webcomponentsjs": "^2.4.4",
     "dotenv": "^8.2.0",
     "first-input-delay": "^0.1.3",
     "gulp-replace": "^1.0.0",
